--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: blog-svc
+        app: blog-svc  # This attaches the key/value pair to every pod created by this Deployment.
     spec:
       containers:
       - name: blog-svc
@@ -38,8 +38,47 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: blog-svc
+    app: blog-svc  # Tells the Service to send traffic to the pods that have the label app: blog-svc.
   ports:
   - port: 3000
     targetPort: 3000
     nodePort: 30001  # Choose an available node port
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: blog-svc-db
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: blog-svc-db
+  template:
+    metadata:
+      labels:
+        app: blog-svc-db
+    spec:
+      containers:
+      - name: blog-svc-db
+        image: postgres:13
+        env:
+        - name: POSTGRES_USER
+          value: "blog_svc"
+        - name: POSTGRES_PASSWORD
+          value: "password"
+        - name: POSTGRES_DB
+          value: "blog_svc_development"
+        ports:
+        - containerPort: 5432
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: blog-svc-db
+spec:
+  selector:
+    app: blog-svc-db
+  ports:
+  - protocol: TCP
+    port: 5432
+    targetPort: 5432
