--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,16 +16,16 @@ spec:
       - name: blog-svc
         image: imi56/blog-svc:latest
         env:
-        - name: DATABASE_HOST
-          value: "blog-svc-db"   # This corresponds to the postgres Service
-        - name: DATABASE_USER
-          value: "blog_svc"
-        - name: DATABASE_PASSWORD
-          value: "password"
-        - name: DATABASE_NAME
-          value: "blog_svc_development"
-        - name: SECRET_KEY_BASE
-          value: "2451e25b54374ddd32ca2f81de485f19d40867b281f6e07f52b9405475ea39eb9efcc7d5e3b47fc42d57d46968e1422c1e1e84eca2f7b3cf925cdd16c792486c"
+          - name: DATABASE_HOST
+            value: "blog-svc-db"
+          - name: DATABASE_USER
+            value: "blog_svc"
+          - name: DATABASE_NAME
+            value: "blog_svc_development"
+          - name: DATABASE_PASSWORD
+            value: "password"
+          - name: SECRET_KEY_BASE
+            value: "2451e25b54374ddd32ca2f81de485f19d40867b281f6e07f52b9405475ea39eb9efcc7d5e3b47fc42d57d46968e1422c1e1e84eca2f7b3cf925cdd16c792486c"
         ports:
         - containerPort: 3000   # Adjust based on your Rails server port
       imagePullSecrets:
