--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: blog-svc  # This attaches the key/value pair to every pod created by this Deployment.
+        app: blog-svc
     spec:
       containers:
       - name: blog-svc
@@ -42,7 +42,7 @@ spec:
                 name: blog-svc-secret
                 key: SECRET_KEY_BASE
         ports:
-        - containerPort: 3000   # Adjust based on your Rails server port
+        - containerPort: 3000
       imagePullSecrets:
       - name: dockerhub-secret
 ---
@@ -53,11 +53,11 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: blog-svc  # Tells the Service to send traffic to the pods that have the label app: blog-svc.
+    app: blog-svc
   ports:
   - port: 3000
     targetPort: 3000
-    nodePort: 30001  # Choose an available node port
+    nodePort: 30001
 ---
 apiVersion: apps/v1
 kind: Deployment
