--- a/k8s/blog-svc-configmap.yaml
+++ b/k8s/blog-svc-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: blog-svc-config
+  namespace: blog-namespace
 data:
   DATABASE_HOST: "blog-svc-db"
   DATABASE_USER: "blog_svc"
