--- a/k8s/blog-svc-db-configmap.yaml
+++ b/k8s/blog-svc-db-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: blog-svc-db-config
+  namespace: blog-namespace
 data:
   POSTGRES_USER: "blog_svc"
   POSTGRES_DB: "blog_svc_development"
