--- a/k8s/blog-svc-db-secret.yaml
+++ b/k8s/blog-svc-db-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: blog-svc-db-secret
+  namespace: blog-namespace
 type: Opaque
 data:
   POSTGRES_PASSWORD: cGFzc3dvcmQ=  # "password" encoded in base64
