--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: blog-svc
+  namespace: blog-namespace
 spec:
   replicas: 1
   selector:
@@ -9,6 +10,7 @@ spec:
       app: blog-svc
   template:
     metadata:
+      namespace: blog-namespace
       labels:
         app: blog-svc
     spec:
@@ -50,6 +52,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: blog-svc
+  namespace: blog-namespace
 spec:
   type: NodePort
   selector:
@@ -63,6 +66,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: blog-svc-db
+  namespace: blog-namespace
 spec:
   replicas: 1
   selector:
@@ -70,6 +74,7 @@ spec:
       app: blog-svc-db
   template:
     metadata:
+      namespace: blog-namespace
       labels:
         app: blog-svc-db
     spec:
@@ -99,6 +104,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: blog-svc-db
+  namespace: blog-namespace
 spec:
   selector:
     app: blog-svc-db
